--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -174,7 +174,7 @@
     "\n",
     "$$\n",
     "\n",
-    "\\text{(Strategy I)} \n",
+    "\\textbf{(Strategy I)} \n",
     "\n",
     "\\quad \n",
     "\n",
@@ -206,7 +206,7 @@
     "\n",
     "$$\n",
     "\n",
-    "\\text{(Strategy II)}\n",
+    "\\textbf{(Strategy II)}\n",
     "\n",
     "\\quad \n",
     "\n",
@@ -240,7 +240,7 @@
     "\n",
     "- $ \\beta_i^m = \\frac{\\text{Cov}(r_i, r_M)}{\\sigma^2(r_M)} \\equiv \\text{Beta of security} \\; S_i \\; \\text{(CAPM) s.t.} \\\\ \\; \\beta_P^m = \\sum_{i = 1}^n \\beta_i^m \\omega_i \\equiv \\text{Porfolio Beta}; $\n",
     "\n",
-    "- $ \\text{TEV}(\\omega) = \\sigma(r_P(\\omega) - r_{\\text{SPY}}) \\equiv \\text{Tracking Error Volatility}; \\\\ \\text{trivial derivation (reader exercise)}: $\n",
+    "- $ \\text{TEV}(\\omega) = \\sigma(r_P(\\omega) - r_{\\text{SPY}}) \\equiv \\text{Tracking Error Volatility}; \\\\ \\text{(non)trivial derivation (reader exercise)}: $\n",
     "\n",
     "$$\n",
     "\\sigma(r_P(\\omega) - r_{\\text{SPY}}) = \\sqrt{\\omega^{\\intercal} \\Sigma \\omega - 2 \\omega^{\\intercal} \\text{Cov}(r, r_{\\text{SPY}}) + \\sigma_{\\text{SPY}}^2}.         \\tag{39}\n",
@@ -288,9 +288,9 @@
     "\n",
     "### $ 2.3 \\; \\text{Executive Summary Formulation} $\n",
     "\n",
-    "$$ \\text{Innumerate}: \\tag{48}$$ \n",
+    "$$ \\textit{(In)numerate}: \\tag{48}$$ \n",
     "\n",
-    "$$ \\text{Strategy I} \\tag{49}$$ \n",
+    "$$ \\textbf{Strategy I} \\tag{49}$$ \n",
     "\n",
     "$$ 1. \\; \\text{Objective} \\equiv \\text{Maximize Returns w/Risk}. \\tag{50}$$ \n",
     "\n",
@@ -305,7 +305,7 @@
     "<br>\n",
     "\n",
     "$$\n",
-    "\\text{Strategy II} \\tag{55}\n",
+    "\\textbf{Strategy II} \\tag{55}\n",
     "$$\n",
     "\n",
     "$$\n",
