--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -337,11 +337,11 @@
     "\n",
     "$$ 2. \\; \\; \\text{Input Construction} : \\tag{62} $$\n",
     "\n",
-    "- $$ \\text{LT LB Period} : n_{\\text{LT}} = 120 \\; \\mid \\; \\Sigma_s \\; \\land \\; \\mu_s \\; \\mid \\; \\text{LT} \\equiv S_{120} \\tag{63} $$\n",
+    "- $$ \\text{LT LB Period} : n_{\\text{LT}} = 120 \\; \\mid \\; \\hat{\\Sigma}_s \\; \\land \\; \\hat{\\mu}_s \\; \\mid \\; \\text{LT} \\equiv S_{120} \\tag{63} $$\n",
     "\n",
-    "- $$ \\text{MT LB Period} : n_{\\text{LT}} = 90 \\; \\mid \\; \\Sigma_s \\; \\land \\; \\mu_s \\; \\mid \\; \\text{MT} \\equiv S_{90} \\tag{64} $$\n",
+    "- $$ \\text{MT LB Period} : n_{\\text{LT}} = 90 \\; \\mid \\; \\hat{\\Sigma}_s \\; \\land \\; \\hat{\\mu}_s \\; \\mid \\; \\text{MT} \\equiv S_{90} \\tag{64} $$\n",
     "\n",
-    "- $$ \\text{ST LB Period} : n_{\\text{LT}} = 40 \\; \\mid \\; \\Sigma_s \\; \\land \\; \\mu_s \\; \\mid \\; \\text{MT} \\equiv S_{40} \\tag{65} $$\n",
+    "- $$ \\text{ST LB Period} : n_{\\text{LT}} = 40 \\; \\mid \\; \\hat{\\Sigma}_s \\; \\land \\; \\hat{\\mu}_s \\; \\mid \\; \\text{MT} \\equiv S_{40} \\tag{65} $$\n",
     "\n",
     "<br>\n",
     "\n",
