--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -367,13 +367,19 @@
     "\n",
     "### $ 3.3 \\; \\text{BackTesting} $\n",
     "\n",
-    "$$ \\text{Definition:} \\; \\text{Historical Data} \\Rightarrow \\text{Performance} \\tag{74} $$\n",
+    "$$ \\text{Definition:} \\; \\text{Historical Data} \\rightarrow \\text{Performance} \\tag{74} $$\n",
     "\n",
     "$$\n",
     "\\text{Logistical Considerations:} \\tag{75}\n",
     "$$\n",
     "\n",
-    "- $$ \\text{BackTest} \\neq \\; \\text{Forecasts} \\Rightarrow \\textbf{Snooping Bias / P-Hacking} \\tag{76} $$\n",
+    "- $$ \\text{BackTest} \\neq \\; \\text{ForeCast} \\Rightarrow \\textbf{Snooping Bias / P-Hacking} \\tag{76} $$\n",
+    "\n",
+    "- $$ \\text{Non-Adapted Filtrations} : $$\n",
+    "\n",
+    "$$\n",
+    "\\{ \\mathcal{F}_t \\}_{t=1}^T \\equiv \\text{Information Available (Up to Time)} \\; t\n",
+    "$$\n",
     "\n",
     "- $$ \\text{Weekly Rebalance} \\tag{77} $$\n",
     "\n",
