--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -440,7 +440,7 @@
     "\n",
     "$$ \\text{To Do} : \\tag{94} $$\n",
     "\n",
-    "- $$ \\text{Task 1} : \\texttt{`download\\_data(start\\_date, end\\_date)`, `compute\\_daily\\_returns(...)`, `annualize\\_data(...)`.} \\tag{95} $$\n",
+    "- $$ \\text{Task 1} : \\texttt{`download\\_data(start\\_date, end\\_date)`, `compute\\_daily\\_returns(...)`, `annualize\\_data(...)`} \\tag{95} $$\n",
     "\n",
     "- $$ \\text{Task 2} : \\texttt{`factor\\_model(...)`.} \\tag{96} $$\n",
     "\n",
