--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -486,11 +486,11 @@
     "}\n",
     "</style>\n",
     "\n",
-    "|                    | $ S_{40}(\\beta_T = 0) $   | $ S_{90}(\\beta_T = 1) $   | $ S_{120}(\\beta_T = 0) $   | SPY |\n",
+    "|                    | $ S_{40}(\\beta_T = 0) $   | $ S_{90}(\\beta_T = 1) $   | $ S_{120}(\\beta_T = 0) $   | $\\textbf{SPY}$ |\n",
     "|:------------------:|:-------------------------:|:-------------------------:|:-------------------------:|:---:|\n",
-    "| **Mean Return**    |                           |                           | 12                         |     |\n",
-    "| **:**              |                           |                           | :                          |     |\n",
-    "| **Max DD**         |                           |                           | 8                          |     |\n",
+    "| $\\textbf{Mean Return}$    |                           |                           | $12$                         |     |\n",
+    "| $\\vdots$              |                           |                           | $\\vdots$                          |     |\n",
+    "| $\\textbf{Max DD}$         |                           |                           | $8$                          |     |\n",
     "\n",
     "<br>\n",
     "\n",
