--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -496,7 +496,7 @@
     "\n",
     "$$ \\text{Furthermore}: \\tag{107} $$\n",
     "\n",
-    "$$ 1. \\; \\; \\text{Evolution Plot} : \\text{Cumulative Daily PnL} \\; \\mid \\; P_0 = \\$100, \\text{SPY}_0 = \\$100. \\tag{108} $$\n",
+    "$$ 1. \\; \\; \\text{Evolution Plot} : \\text{Cumulative Daily PnL} \\; \\mid \\; P_0 = \\$100, \\; \\text{SPY}_0 = \\$100. \\tag{108} $$\n",
     "$$ 2. \\; \\; \\text{Plot + Analyze (Daily) Return Distribution}. \\tag{109} $$"
    ]
   },
@@ -511,13 +511,13 @@
     "\n",
     "\\\\\n",
     "\n",
-    "\\text{Crisis Periods (Subprime, COVID);}\n",
+    "\\text{Crisis Periods (Subprime, COVID, et cetera.);}\n",
     "\n",
     "\\tag{110}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "2 \\equiv \\text{Axes : Estimator Term-Structure Sensitivity (ST, MT, LT) for} \\; \\boldsymbol{\\Sigma} \\; \\land \\; \\boldsymbol{\\mu} \\mid \\text{Target} \\; \\beta_T \\; \\text {Sensitivity};\n",
+    "2 \\equiv \\text{Axes : Estimator Term-Structure Sensitivity (ST, MT, LT) for} \\; \\boldsymbol{\\Sigma} \\; \\land \\; \\boldsymbol{\\mu} \\; \\mid \\; \\text{Target} \\; \\beta_T \\; \\text {Sensitivity};\n",
     "\\tag{111}\n",
     "$$\n",
     "\n",
