--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# $$ \\textit{\\textbf{{Act}}} \\; \\; \\; \\text{Nulla} $$ \n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## $0 \\; \\; \\text{Amendment}$\n",
     "\n",
     "$$\n",
@@ -13,6 +22,22 @@
     "$$\n",
     "\\text{This is my corrective action and (my) letter (to you).} \\tag{0}\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# $$ \\textit{\\textbf{{Act}}} \\; \\; \\; I $$ \n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -530,6 +555,17 @@
     "4 \\equiv \\texttt{Code.}\n",
     "\\tag{112}\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "# $$ \\textit{\\textbf{{Act}}} \\; \\; \\; II $$ \n",
+    "\n",
+    "---"
    ]
   }
  ],
