--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# $$ \\textit{\\textbf{{Act}}} \\; \\; \\; \\text{Nulla} $$ \n",
+    "# $$ \\textit{\\textbf{{Act}}} \\; \\; \\; \\text{Nulla} \\mid \\Re{(0 + 0i)}$$ \n",
     "\n",
     "---"
    ]
