--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -558,7 +558,7 @@
    "source": [
     "---\n",
     "\n",
-    "# $$ \\textit{\\textbf{{Act}}} \\; \\; \\; II \\; \\mid \\; 2! \\equiv e^{\\ln(2)} $$ \n",
+    "# $$ \\textit{\\textbf{{Act}}} \\; \\; \\; II \\; \\mid \\; 2! \\not\\equiv e^{\\ln(2)} $$ \n",
     "\n",
     "---"
    ]
