--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# $\\text{Code (Vomit)} \\; \\mid \\; : \\text{P}$"
+    "# $\\text{Code (Vomit)} \\; \\mid \\; \\, : \\text{P}$"
    ]
   },
   {
