--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -115,14 +115,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error processing the Fama-French data: 'Value based partial slicing on non-monotonic DatetimeIndexes with non-existing keys is not allowed.'\n"
+      "        Alpha    Mkt-RF       SMB       HML\n",
+      "DBA -0.000032  0.002360 -0.000186  0.000630\n",
+      "EPP -0.000142  0.010475 -0.000677  0.001387\n",
+      "EWJ -0.000139  0.007755 -0.000921  0.000244\n",
+      "FEZ -0.000184  0.011116 -0.000657  0.001652\n",
+      "FXE -0.000074  0.001090  0.000042  0.000097\n"
      ]
     }
    ],
@@ -136,6 +141,14 @@
     "        # Load the Fama-French factors data, skipping the first 4 metadata lines\n",
     "        ff_data = pd.read_csv(file_path, skiprows=3, index_col=0)\n",
     "        ff_data.index = pd.to_datetime(ff_data.index, format='%Y%m%d', errors='coerce')\n",
+    "        \n",
+    "        # Drop rows with invalid dates\n",
+    "        ff_data = ff_data.dropna()\n",
+    "        \n",
+    "        # Sort the index to ensure it is in chronological order\n",
+    "        ff_data = ff_data.sort_index()\n",
+    "        \n",
+    "        # Slice the data for the specified date range\n",
     "        ff_data = ff_data.loc[start_date:end_date]\n",
     "        return ff_data\n",
     "    except Exception as e:\n",
