--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -4,14 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# $\\text{Code (Vomit)} \\; \\mid \\; \\, : \\text{P}$"
+    "# $\\text{Code (Vomit)} \\; \\mid \\; \\, : \\text{P}$\n",
+    "\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### $ 1. \\; \\text{Collection (of Data)} $"
+    "### $ 1. \\; \\; \\; \\text{Collection (of Data)} $"
    ]
   },
   {
@@ -50,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### $ 2. \\; \\text{Construction (of)} \\; \\mathcal{THE} \\; \\, \\textbf{Factor Model} $"
+    "### $ 2. \\; \\; \\; \\text{Construction (of)} \\; \\mathcal{THE} \\; \\, \\textbf{Factor Model} $"
    ]
   },
   {
@@ -183,6 +185,13 @@
     "    factor_loadings_df.to_csv('factor_loadings.csv')\n",
     "\n",
     "    print(factor_loadings_df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### $ 3. \\; \\; \\; \\text{Optim(ization)} $"
    ]
   }
  ],
