--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -193,6 +193,58 @@
    "source": [
     "### $ 3. \\; \\; \\; \\text{Optim(ization)} $"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal weights for Strategy I: [ 1.57452502 -1.99997055 -1.99999286 -1.99999298 -1.99999269  1.9999992\n",
+      " -0.57456848  1.99999897  1.99999577  1.99999792 -1.99999753  1.99999822]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cvxpy as cp\n",
+    "import numpy as np\n",
+    "\n",
+    "def optimize_strategy_I(expected_returns, cov_matrix, factor_loadings, beta_constraints, lambd):\n",
+    "    n = len(expected_returns)\n",
+    "    w = cp.Variable(n)\n",
+    "    portfolio_return = expected_returns @ w\n",
+    "    portfolio_risk = cp.quad_form(w, cov_matrix)\n",
+    "    \n",
+    "    # Calculate the portfolio beta using factor loadings\n",
+    "    portfolio_beta = factor_loadings['Mkt-RF'].values @ w\n",
+    "    \n",
+    "    constraints = [\n",
+    "        cp.sum(w) == 1,\n",
+    "        portfolio_beta >= beta_constraints[0],\n",
+    "        portfolio_beta <= beta_constraints[1],\n",
+    "        w >= -2,\n",
+    "        w <= 2\n",
+    "    ]\n",
+    "    \n",
+    "    # Objective function: maximizing return minus risk-adjusted return\n",
+    "    objective = cp.Maximize(portfolio_return - lambd * cp.norm(portfolio_risk, 2))\n",
+    "    prob = cp.Problem(objective, constraints)\n",
+    "    prob.solve()\n",
+    "    \n",
+    "    return w.value\n",
+    "\n",
+    "# Example usage\n",
+    "beta_constraints = [-0.5, 0.5]\n",
+    "lambd = 0.1\n",
+    "expected_returns = factor_loadings_df['Alpha'].values\n",
+    "cov_matrix = etf_returns.cov().values\n",
+    "\n",
+    "optimal_weights_I = optimize_strategy_I(expected_returns, cov_matrix, factor_loadings_df, beta_constraints, lambd)\n",
+    "print(\"Optimal weights for Strategy I:\", optimal_weights_I)"
+   ]
   }
  ],
  "metadata": {
