--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -18,9 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  12 of 12 completed\n"
+     ]
+    }
+   ],
    "source": [
     "import yfinance as yf\n",
     "import pandas as pd\n",
@@ -49,9 +57,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Line 1: This file was created by CMPT_ME_BEME_RETS_DAILY using the 202403 CRSP database.\n",
+      "\n",
+      "Line 2: The Tbill return is the simple daily rate that, over the number of trading days\n",
+      "\n",
+      "Line 3: in the month, compounds to 1-month TBill rate from Ibbotson and Associates Inc.\n",
+      "\n",
+      "Line 4: \n",
+      "\n",
+      "Line 5: ,Mkt-RF,SMB,HML,RF\n",
+      "\n",
+      "Line 6: 19260701,    0.10,   -0.25,   -0.27,   0.009\n",
+      "\n",
+      "Line 7: 19260702,    0.45,   -0.33,   -0.06,   0.009\n",
+      "\n",
+      "Line 8: 19260706,    0.17,    0.30,   -0.39,   0.009\n",
+      "\n",
+      "Line 9: 19260707,    0.09,   -0.58,    0.02,   0.009\n",
+      "\n",
+      "Line 10: 19260708,    0.21,   -0.38,    0.19,   0.009\n",
+      "\n",
+      "Error reading the CSV file: time data \"Copyright 2024 Kenneth R. French\" doesn't match format \"%Y%m%d\", at position 25710. You might want to try:\n",
+      "    - passing `format` if your strings have a consistent format;\n",
+      "    - passing `format='ISO8601'` if your strings are all ISO8601 but not necessarily in exactly the same format;\n",
+      "    - passing `format='mixed'`, and the format will be inferred for each element individually. You might want to use `dayfirst` alongside this.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -78,9 +117,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Alpha    Mkt-RF       SMB       HML\n",
+      "DBA -0.000032  0.002360 -0.000186  0.000630\n",
+      "EPP -0.000142  0.010475 -0.000677  0.001387\n",
+      "EWJ -0.000139  0.007755 -0.000921  0.000244\n",
+      "FEZ -0.000184  0.011116 -0.000657  0.001652\n",
+      "FXE -0.000074  0.001090  0.000042  0.000097\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import statsmodels.api as sm\n",
@@ -151,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,9 +223,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal weights for Strategy I: [ 1.57452502 -1.99997055 -1.99999286 -1.99999298 -1.99999269  1.9999992\n",
+      " -0.57456848  1.99999897  1.99999577  1.99999792 -1.99999753  1.99999822]\n"
+     ]
+    }
+   ],
    "source": [
     "import cvxpy as cp\n",
     "import numpy as np\n",
@@ -222,9 +283,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal weights for Strategy I: [ 1.57452502 -1.99997055 -1.99999286 -1.99999298 -1.99999269  1.9999992\n",
+      " -0.57456848  1.99999897  1.99999577  1.99999792 -1.99999753  1.99999822]\n"
+     ]
+    }
+   ],
    "source": [
     "import cvxpy as cp\n",
     "import numpy as np\n",
@@ -276,9 +346,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal weights for Strategy II: [ 0.02058621  0.1072614   0.09340881  0.10845794  0.02415552  0.03810605\n",
+      "  0.08879167  0.19751428  0.05704948  0.17376242 -0.05986655  0.15077276]\n"
+     ]
+    }
+   ],
    "source": [
     "from scipy.optimize import minimize\n",
     "\n",
